--- a/views/room.ejs
+++ b/views/room.ejs
@@ -6,21 +6,16 @@
   </head>
   <body>
     <main>
-      <ul id="messages">
-        <!-- <li>
-          <img src="images/amber.jpg" alt="avatar" />
-          <div class="right">
-            <span>Username</span>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit</p>
-          </div>
-        </li> -->
-      </ul>
+      <ul id="messages"></ul>
       <form id="form">
         <input id="input" autocomplete="off" placeholder="Message..." />
         <button class="button">Send</button>
       </form>
     </main>
   </body>
+  <script>
+    const roomName = "<%= roomName %>";
+  </script>
   <script defer src="/socket.io/socket.io.js"></script>
   <script defer src="script.js"></script>
 </html>
