--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,20 +1,27 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Socket.IO chat</title>
+    <title>Giga chat | Home</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <form action="/room" method="POST">
-      <input type="text" name="room" id="room" required />
-      <button id="submit-room" type="submit">Create room</button>
-    </form>
-    <div class="rooms-container">
-      <% Object.keys(rooms).forEach(room => { %>
-      <div><%= room %></div>
-      <a href="/<%= room %>">Join</a>
-      <% }) %>
-    </div>
+    <main>
+      <form id="room-form" action="/room" method="POST">
+        <h2>Create a new room</h2>
+        <input class="room" type="text" name="room" required />
+        <button class="button" id="submit-room" type="submit">
+          Create room
+        </button>
+      </form>
+      <div class="rooms-container">
+        <% Object.keys(rooms).forEach(room => { %>
+        <div class="room-item">
+          <h3><%= room %></h3>
+          <a class="button" href="/<%= room %>">Join</a>
+        </div>
+        <% }) %>
+      </div>
+    </main>
   </body>
   <script defer src="/socket.io/socket.io.js"></script>
   <script defer src="lobby.js"></script>
