--- a/views/room.ejs
+++ b/views/room.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Socket.IO chat</title>
+    <title>Giga chat | <%= roomName %></title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
